fieldx/tests/uncompilable/stable+serde,sync,async/deserialize_off.stderr
warning: unused import: `Deserialize`
 --> tests/uncompilable/deserialize_off.rs
  |
  | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `Foo: Deserialize<'_>` is not satisfied
 --> tests/uncompilable/deserialize_off.rs
  |
  |     let _json = serde_json::from_str::<Foo>(r#"{"v": "whatever"}"#);
  |                                        ^^^ the trait `Deserialize<'_>` is not implemented for `Foo`
  |
  = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `Foo` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Deserialize<'de>`:
            &'a Path
            &'a [u8]
            &'a str
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
          and $N others
note: required by a bound in `serde_json::from_str`
 --> $CARGO/serde_json-1.0.139/src/de.rs
  |
  | pub fn from_str<'a, T>(s: &'a str) -> Result<T>
  |        -------- required by a bound in this function
  | where
  |     T: de::Deserialize<'a>,
  |        ^^^^^^^^^^^^^^^^^^^ required by this bound in `from_str`
